# calendar

./: .gitlab-ci.yml  Dockerfile  abc.py  discord_bot.py  local-docker-compose.yml  log_codes.json  manage.py  pyproject.toml
configs/: gunicorn_config.py
core/: __init__.py
core/abstractions/: __init__.py  base_models.py  elastics.py  handler.py  manager.py  minio.py  redis.py  singleton.py  validator.py
core/connectors/: __init__.py  base.py  cads_connector.py  facebook_connector.py  geolocation_connector.py  isc_connector.py  service.py  user_connector.py  zalo_connector.py
core/constants/: __init__.py  cache.py  celery_task.py  chat.py  chat_connector.py  chat_service.py  ctx_var.py  default.py  error_code.py  facebook.py  facebook_error_msg.py  fchat.py  files.py  http.py  logger.py  nats.py  notification.py  rabbitmq.py  redis.py  report_service.py  sql_queries.py  webhook_service.py  zalo.py
core/elk/: __init__.py  client.py  manager.py
core/exceptions/: __init__.py  response_exception.py
core/handler/: __init__.py  base.py  consummer.py
core/middlewares/: __init__.py
core/minio/: __init__.py  client.py  manager.py
core/rabbitmq/: __init__.py  base.py  client.py  consumer.py
core/redis_client/: __init__.py  client.py  manager.py  sentinel_client.py
core/schema/: __init__.py  fastapi_response.py  message.py  message_websocket.py  report_schema.py  room_info.py  socketio_nats.py
core/templates/: __init__.py  django_project.py  (+3 more)
envs/: .gitignore  local.env  shared.env
scripts/: run_celery_beat.sh  run_celery_worker.sh  run_service.sh
(+81 files in other folders)
