[tool.poetry]
name = "noti-service"
version = "0.1.0"
description = ""
authors = ["ntdu <ntdu198@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
kombu = "^5.2.4"
celery = "^5.2.7"
djangorestframework = "^3.14.0"
fastapi = {extras = ["all"], version = "^0.95.2"}
python-socketio = "^5.8.0"
psycopg2-binary = "^2.9.6"
django-redis = "^5.2.0"
django-cors-headers = "^4.0.0"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
firebase-admin = "^6.1.0"
fcm-django = "^2.0.0"
elasticsearch = "^8.8.0"
django-celery-beat = "^2.5.0"
python-json-logger = "^2.0.7"
discord-py = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
